--- a/main.html
+++ b/main.html
@@ -7,6 +7,31 @@
 </head>
 
 <body>
+	<header>
+        <h1>The Shawshank Redemption</h1>
+    </header>
+    <nav>
+        <a href="#nav-actor">Actors</a>
+        <a href="#nav-quote">Quotes</a>
+    </nav>
+    <section id="summary">
+        <p>The Shawshank Redemption is a classic film about hope, friendship, and redemption. The story follows Andy Dufresne, a banker who is wrongly convicted of murder and sent to Shawshank State Penitentiary.</p>
+    </section>
+    <section id="actor">
+        <h2>Actors</h2>
+        <p>The movie stars Tim Robbins as Andy Dufresne and Morgan Freeman as Ellis "Red" Redding.</p>
+    </section>
+    <section id="quote">
+        <h2>Quotes</h2>
+        <p>"Get busy living, or get busy dying." - Andy Dufresne</p>
+    </section>
+    <aside>
+        <p>IMDb Rating: 9.3</p>
+        <p>Release Date: September 23, 1994</p>
+    </aside>
+    <footer>
+        Produced by: Frank Darabont
+    </footer>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
