--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
         <h1>The Shawshank Redemption</h1>
     </header>
     <nav>
-        <a href="#nav-actor">Actors</a>
-        <a href="#nav-quote">Quotes</a>
+        <a href="actor" id="nav-actor">Actors</a>
+        <a href="quote" id="nav-quote">Quotes</a>
     </nav>
     <section id="summary">
         <p>The Shawshank Redemption is a classic film about hope, friendship, and redemption. The story follows Andy Dufresne, a banker who is wrongly convicted of murder and sent to Shawshank State Penitentiary.</p>
