--- a/main.html
+++ b/main.html
@@ -11,9 +11,12 @@
         <h1>The Shawshank Redemption</h1>
     </header>
     <nav>
-        <a href="actor" id="nav-actor">Actors</a>
-        <a href="quote" id="nav-quote">Quotes</a>
+        <a href="#actor" id="nav-actor">Actors</a>
+        <a href="#quote" id="nav-quote">Quotes</a>
     </nav>
+	<summary>
+		This movie is about to patient
+	</summary>
     <section id="summary">
         <p>The Shawshank Redemption is a classic film about hope, friendship, and redemption. The story follows Andy Dufresne, a banker who is wrongly convicted of murder and sent to Shawshank State Penitentiary.</p>
     </section>
